# NAMD-LMI

./: .fortls.json  .gitignore  404.html  Acknowledgements.html  Cargo.toml  Cross.toml  Dockerfile  Feedback.html  Installation.html  Introduction.html  Makefile  README.md  git-ver.sh  hamil.html  make.inc  make.inc.gcc  make.inc.gcc_mkl  make.inc.intel  make.inc.macos  nac.html  overall.html  print.html  searchindex.js  searchindex.json  surfhop.html
.github/workflows/: build-test.yml  deploy-docs.yml  release-binaries.yml
doc/: Doxygenfile  Makefile  index.html  search.html
doc/interface/: cumsum.html  lower_bound.html  tdm_get_tdm_pseudo.html  wavecar_read_wavefunction.html
doc/lists/: files.html  modules.html  procedures.html  types.html
doc/module/: common_mod.html  input_mod.html  namd_lumi_mod.html  string_mod.html  surface_hopping_mod.html  tdm_mod.html  wavecar_mod.html
doc/proc/: cli_parse.html  cumtrapz.html  generate_static_calculation_path.html  init_random_seed.html  input_destroy.html  input_example.html  input_from_file.html  input_mpisync.html  input_to_file.html  int2str.html  mpi_partition.html  qsort_i.html  qsort_partition_.html  randint_range.html  real2str.html  self_correlate_function.html  sh_dish_decoherence_rate_.html  sh_dish_dephasetime_.html  surface_hopping_calc_hop_prob.html  surface_hopping_destroy.html  surface_hopping_hopping_destination.html  surface_hopping_init.html  surface_hopping_init_with_input.html  surface_hopping_print_stat.html  surface_hopping_run.html  surface_hopping_run_mpi.html  surface_hopping_save_to_h5.html  tdm_get_tdm_pseudo_q.html  tdm_get_tdm_pseudo_qs.html  tdm_get_tdm_wav.html  (+13 more)
docs/: book.toml
namd/: Cargo.toml  katex-header.html
namd/src/: cli.rs  constants.rs  efield.rs  function.pest  hamiltonian.rs  input.rs  lib.rs  logging.rs  logo.txt  main.rs  nac.rs  surface_hopping.rs  version.rs
namd/src/commands/: generate.rs  mod.rs  run.rs
namd/src/commands/scripts/: efield.rhai  inibands.py  mod.rs  plot-couplings.py  post-process.py
namd/src/core/: config.rs  constants.rs  couplings.rs  hamiltonian.rs  input.rs  mod.rs  surface_hopping.rs  wavefunction.rs
namd/src/hamil/: command.rs  config.rs  efield.rs  efield_template.rhai  hamil_impl.rs  hamil_plot.py  mod.rs  wavefunction_impl.rs
namd/src/nac/: command.rs  config.rs  input.rs  mod.rs  nac_impl.rs  nac_plot.py
namd/src/scripts/: mod.rs
namd/src/surfhop/: command.rs  config.rs  inisteps.py  mod.rs  surfhop_impl.rs  surfhop_plot.py  wavefunction_impl.rs
namd/src/utils/: mod.rs  run.rs
namd/src/utils/scripts/: efield.rhai  mod.rs
namd/src/waveslice/: command.rs  config.rs  mod.rs  waveslice_impl.rs
namd/tests/: 1.5eV.rhai  1.5eV.txt  2.0eV.rhai  2.0eV.txt  input.toml
shared/: Cargo.toml
shared/src/: lib.rs  numeric_methods.rs  trajectory.rs
src/: Makefile  common.f90  common.h  hamiltonian.f90  input.f90  lib.f90  nac.f90  namd_lumi.f90  scripts.c  string.f90  surface_hopping.f90  tdm.f90  wavecar.f90
tests/: DEPHTIME  Makefile  NormalCAR_GaAs  WAVECAR_GaAs  WAVECAR_gamx  WAVECAR_ncl  WAVECAR_std  gvecs_gamx  test.f90  test_common.f90  test_hamiltonian.f90  test_input.f90  test_lib.f90  test_nac.f90  test_string.f90  test_surface_hopping.f90  test_tdm.f90  test_wavecar.f90  test_waves.f90
vasp_parsers/: Cargo.toml
vasp_parsers/src/: chg.rs  kpoints.rs  lib.rs  outcar.rs  poscar.rs  procar.rs  wavecar.rs
vasp_parsers/tests/: XDATCAR_multiheader.vasp  XDATCAR_oneheader.vasp  test_outcar.rs  test_poscar.rs
(+33 files in other folders)
