[package]
name = "namd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hdf5         = "0.8.1"
hdf5-sys     = { version = "0.8.1", features = ["static"] }
mpi          = { version = "0.6.0", features = ["derive"] }
once_cell    = "1.17.2"
pest         = "2.6.0"
pest_derive  = "2.6.0"
rand         = "0.8.5"
rayon        = "1.7.0"
serde        = { version = "1.0.163", features = ["derive"] }
shared       = { path = "../shared" }
toml         = "0.7.4"
vasp_parsers = { path = "../vasp_parsers" }
#specialfunctions = { git = "ssh://git@github.com/Ionizing/SpecialFunctions-rs.git" }

[[bin]]
name = "namd_lumi"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.5.0"
