[package]
name = "namd"
version = "0.1.0"
edition = "2021"
authors = ["Ionizing"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
built = { version = "0.7.1", features = ["chrono", "git2"] }
clap         = { version = "4.4.8", features   = ["derive"] }
hdf5         = "0.8.1"
hdf5-sys     = { version = "0.8.1", features   = ["static"] }
itertools = "0.13.0"
log4rs = "1.2.0"
#katexit = "0.1.4"
#mpi          = { version = "0.6.0", features   = ["derive"] }
once_cell    = "1.17.2"
ordered-float = "4.2.0"
pathfinding = "4.4.0"
rand         = "0.8.5"
rayon        = "1.7.0"
regex = "1.10.6"
rhai = { version = "1.16.3", features = ["sync"] }
serde        = { version = "1.0.163", features = ["derive"] }
shared       = { path    = "../shared" }
toml         = "0.7.4"
vasp_parsers = { path    = "../vasp_parsers" }
#specialfunctions = { git = "ssh://git@github.com/Ionizing/SpecialFunctions-rs.git" }

[[bin]]
name = "namd_lmi"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.5.0"

[build-dependencies]
built = { version = "0.7.1", features = ["chrono", "git2"] }
