[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow  = "1.0.71"
clap    = "4.2.7"
log     = "0.4.17"
ndarray = "0.15.6"
#ndarray-linalg = { version = "0.16.0", features = ["intel-mkl-system"] }
ndarray-linalg = { git = "https://github.com/matthagan15/ndarray-linalg", rev = "b4dd1c7e7762d59b47dc75964533be0bdd278a9f", features = ["intel-mkl-system"] }
ndrustfft = "0.4.0"
rayon   = "1.7.0"
regex   = "1.8.1"
tracing = { version = "0.1.40", features = ["log"] }
